kube/0.deployment.blue.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  namespace: demo
  name: web-blue
  labels:
    app: web
    color: blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
        color: blue
    spec:
      containers:
      - name: web
        image: jasonyihk/kube-demo:blue
        ports:
        - name: web-port
          containerPort: 80
        resources:
          requests:
            memory: 256Mi
            cpu: 100m
          limits:
            memory: 256Mi
            cpu: 200m
        imagePullPolicy: Always
