kube/0.deployment.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  namespace: demo
  name: web
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: jasonyihk/kube-demo:latest
        ports:
        - name: web-port
          containerPort: 80
        resources:
          requests:
            memory: 256Mi
            cpu: 100m
          limits:
            memory: 256Mi
            cpu: 500m
