kube/4.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: demo
  name: web
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: web-demo.lkkhpgdi.com
    http:
      paths:
      - backend:
          serviceName: web-service
          servicePort: 80
        path: "/"
  tls:
  - hosts:
    - web-demo.lkkhpgdi.com
    secretName: lkkhpgdi-ssl-cert-secret
